[gd_scene load_steps=4 format=3 uid="uid://bdg5jfm868mcw"]

[ext_resource type="Script" path="res://game.gd" id="1_3qqvl"]
[ext_resource type="PackedScene" uid="uid://cwaeiopqqogqs" path="res://levelup_bar.tscn" id="2_2hxyq"]
[ext_resource type="PackedScene" uid="uid://c0pop64adn8xx" path="res://grid.tscn" id="2_6i4ra"]

[node name="Game" type="Node2D"]
script = ExtResource("1_3qqvl")

[node name="BgLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect2" type="ColorRect" parent="BgLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.486275, 0.0941176, 0.235294, 1)

[node name="GridContainer" parent="." instance=ExtResource("2_6i4ra")]
unique_name_in_owner = true
position = Vector2(0, 385)

[node name="GuiLayer" type="CanvasLayer" parent="."]

[node name="LevelupBar" parent="GuiLayer" instance=ExtResource("2_2hxyq")]
unique_name_in_owner = true
offset_left = 64.0
offset_top = 348.0
offset_right = 576.0
offset_bottom = 375.0

[node name="TitleLabel" type="Label" parent="GuiLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.0
offset_top = 31.0
offset_right = 164.0
offset_bottom = 228.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 144
text = "2048"

[node name="MarginContainer" type="MarginContainer" parent="GuiLayer"]
offset_left = 64.0
offset_top = 260.0
offset_right = 311.0
offset_bottom = 348.0

[node name="HBoxContainer" type="HBoxContainer" parent="GuiLayer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GuiLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Score: "

[node name="ScoreLabel" type="Label" parent="GuiLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Button" type="Button" parent="GuiLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "LevelUp"

[connection signal="cell_spawned" from="GridContainer" to="." method="_on_grid_container_cell_spawned"]
[connection signal="level_up" from="GuiLayer/LevelupBar" to="." method="_on_level_up"]
[connection signal="button_up" from="GuiLayer/MarginContainer/HBoxContainer/Button" to="." method="_on_debug_level_up"]
